[metadata]
name = dmx_trigger
version = 0.1
url = https://github.com/linuxnow/dmx_trigger
author = Pau Aliagas
author_email = pau@newtral.org
description = AN OLA DMX trigger package
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/linuxnow/dmx_trigger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent

[options]
packages= find:
python_requires = >= 2.7
scripts = bin/vlc_video_provider.py
