[metadata]
name = dmx_trigger
version = 0.1.2
url = https://github.com/linuxnow/dmx_trigger
author = Pau Aliagas
author_email = linuxnow@gmail.com
description = An OLA DMX video trigger package
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/linuxnow/dmx_trigger/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
packages= find:
python_requires = >= 3.0
scripts = bin/vlc_video_provider.py

[options.data_files]
config =
    config/dmx_trigger.yaml
    config/media_list.yaml
    config/systemd-units/dmx_trigger.conf
    config/systemd-units/dmx_trigger.service
    config/systemd-units/olad.service
    config/systemd-units/olad.conf
doc =
    doc/howto_systemd.txt
